JS[css] fixed excessive padding on small screens

--- a/client/less/mentorProfile.less
+++ b/client/less/mentorProfile.less
@@ -59,3 +59,14 @@
 	}
 
 }
+
+
+@media(max-width: @screen-tablet){
+  .mentor {
+    padding: 2rem 2rem 1rem;
+    margin: 2rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
+
+}
